# claude-run

./: .gitignore  AGENTS.md  BENCHMARK_REPORT.md  Cargo.toml  README.md  TODOS.md  bench.config.yaml  build.rs  components.json  install-hooks.sh  package.json  pnpm-lock.yaml
.claude-plugin/: marketplace.json
.github/workflows/: benchmarks.yml  deploy-to-staging.yaml
api/: server.ts  storage.ts
hooks/: claude-run-status.sh  hooks.json  session-start.sh
scripts/: bench.sh  install-service.sh  launch.sh
skills/charts/: SKILL.md
src/: embedded.rs  main.rs  models.rs  push.rs  server.rs  state.rs  storage.rs  summarizer.rs  tls.rs  tts.rs  watcher.rs
web/: app.tsx  index.css  index.html  main.tsx  tsconfig.json  types.ts  utils.ts  vite.config.ts
web/components/: context-panel.tsx  file-panel.tsx  markdown-export.tsx  markdown-renderer.tsx  message-block.tsx  plan-widget.tsx  scroll-to-bottom-button.tsx  session-list.tsx  session-view.tsx  share-button.tsx  tail-panel.tsx  task-list-widget.tsx  tts-button.tsx
web/components/ai-elements/: message.tsx  reasoning.tsx  shimmer.tsx
web/components/tool-renderers/: ask-question-renderer.tsx  bash-renderer.tsx  copy-button.tsx  edit-renderer.tsx  index.ts  plan-session-renderer.tsx  read-renderer.tsx  search-renderer.tsx  task-renderer.tsx  todo-renderer.tsx
web/hooks/: use-event-source.ts  use-push.ts  use-theme.ts  use-whisper.ts
web/public/: manifest.json  sw.js
web/src/components/: markdown-renderer.tsx  message-block.tsx
